--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ charset-normalizer==2.0.4
 click==8.0.1
 cookiecutter==2.1.1
 crispy-tailwind==0.5.0
-Django==3.2.16
+Django==3.2.18
 django-browser-reload==1.6.0
 django-crispy-forms==1.14.0
 django-environ==0.9.0
@@ -24,7 +24,7 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.0
-Pillow==9.2.0
+Pillow==9.3.0
 platformdirs==3.0.0
 poyo==0.5.0
 psycopg2==2.9.3
@@ -42,3 +42,4 @@ text-unidecode==1.3
 tomli==2.0.1
 urllib3==1.26.12
 whitenoise==6.2.0
+setuptools==65.5.1
